--- a/css/components/container.css
+++ b/css/components/container.css
@@ -1,4 +1,16 @@
 .container {
-  /* TODO */
+  width: 800px;
+  margin: 0 auto;
 }
 
+@media (max-width: 900px) {
+  .container {
+    width: 600px;
+  }
+}
+
+@media (max-width: 700px) {
+  .container {
+    width: 300px;
+  }
+}
